Fixed problem overflow-x by Main&Header section.

--- a/src/sass/_header.sass
+++ b/src/sass/_header.sass
@@ -1,11 +1,11 @@
 .header
  color: $c-normal
- padding: 50px 0px 165px 0px
- &>.container
-  justify-content: space-between
-  align-items: center
-  display: flex
-  flex: 1
+ padding-top: 50px
+ padding-bottom: 165px
+ justify-content: space-between
+ align-items: center
+ display: flex
+ width: 100%
  // Меню навигации
  &__nav>ul
   display: flex
