--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -7,9 +7,9 @@
 .main
  min-height: 100vh
  color: $c-normal
- width: 100vw
  cursor: default
  position: relative
+ overflow-x: hidden
  &::before
   background: url(/src/img/main-bg.jpg) center no-repeat
   background-size: 100% 100%
@@ -94,9 +94,10 @@
  background-image: linear-gradient(-53deg, #00b8d4 0%, #1de9b6 100%)
  opacity: .7
  width: 100vw
+ overflow-x: hidden
  z-index: -1
 .testimonials
- width: 100vw
+ overflow-x: hidden
  min-height: 564px
  height: auto
  position: relative
