--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -9,19 +9,17 @@
 		&__img
 			width:	100px
 			height:	100px
-		&>.container
+		&>a
 			height:	100%
-			&>a
-				height:	100%
-				&>p
-					font-size:	30px
-					line-height:	1.125em
-			&>nav>ul>li>a
-				font-size:	36px
-			&>div>a
-				font-size:	36px
-				border-width:	5px
-				border-radius:	5px
+			&>p
+				font-size:	30px
+				line-height:	1.125em
+		&>nav>ul>li>a
+			font-size:	36px
+		&>div>a
+			font-size:	36px
+			border-width:	5px
+			border-radius:	5px
 	.main
 		display:	flex
 		flex-direction:	column
@@ -30,7 +28,7 @@
 		&__subtitle
 			font-size:	32px
 			line-height:	1.5em
-		&>.container
+		&>div.container
 			width:	100%
 			height:	100%
 			position:	absolute
@@ -103,10 +101,9 @@
 		max-width:	750px
 	.header
 		padding:	25px	0px
-		>.container
-			flex-direction:	column
-			>nav.header__nav
-				margin:	10px	0px
+		flex-direction:	column
+		>nav.header__nav
+			margin:	10px	0px
 	.main
 		&>.container
 			padding-bottom:	45px
@@ -163,35 +160,35 @@
 @media	(	max-width:	767px	)
 	.container
 		max-width:	none
-		.contacts-form
-			width:	75%
-			&__block
-				flex-direction:	column
-				&:last-child
-					flex-direction:	row
-			&__inner
-				width:	100%
-				&:first-child
-					flex-basis:	50%
-					margin:	0
-					margin-bottom:	20px
-		.footer>.container
+	.contacts-form
+		width:	75%
+		&__block
 			flex-direction:	column
-			align-items:	center
-		.footer-wrap
-			&:first-child
-				width:	100%
-				justify-content:	center
-				&>.footer-inner
-					justify-content:	center
-					&:first-child
-						display:	flex
-						margin-bottom:	20px
 			&:last-child
-				width:	100%
-				align-items:	center
-				&>.footer-inner:first-child
-					margin:	20px	0px
+				flex-direction:	row
+		&__inner
+			width:	100%
+			&:first-child
+				flex-basis:	50%
+				margin:	0
+				margin-bottom:	20px
+	.footer>.container
+		flex-direction:	column
+		align-items:	center
+	.footer-wrap
+		&:first-child
+			width:	100%
+			justify-content:	center
+			&>.footer-inner
+				justify-content:	center
+				&:first-child
+					display:	flex
+					margin-bottom:	20px
+		&:last-child
+			width:	100%
+			align-items:	center
+			&>.footer-inner:first-child
+				margin:	20px	0px
 @media	(	max-width:	575px	)
 	.main-links
 		flex-direction:	column
