--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -37,7 +37,6 @@ input,	body, button
 body
 	margin:	0
 	padding:	0
-	overflow-x:	hidden
 	min-height:	100%
 p,	h1,	h2,	h3,	h4,	h5, ul
 	margin:	0
